meja/tests/list_weak_variable.stderr
File "tests/list_weak_variable.meja", line 5, characters 13-14:
Error: Incompatable types _ and list('a):
       Cannot unify field and bool
