meja/tests/list_weak_variable.meja
let x = [];

let y = true :: x;

let z = 1 :: x;
